--- a/src/main/resources/static/css/common_for_lc_style.css
+++ b/src/main/resources/static/css/common_for_lc_style.css
@@ -87,6 +87,13 @@ header {
     );
 }
 
+.img-logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%
+}
+
+
 main {
     width: 100%;
     height: 100%;
