--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -62,6 +62,12 @@ header {
   font-size: large;
 }
 
+.img-logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%
+}
+
 .auth-button {
   background: rgb(121, 184, 184);
   background: linear-gradient(
