--- a/src/main/resources/static/css/registration_style.css
+++ b/src/main/resources/static/css/registration_style.css
@@ -34,6 +34,11 @@ header {
 .branding h3 {
   margin-left: 15px;
 }
+.img-logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%
+}
 
 main {
   width: 100%;
