--- a/src/main/resources/static/css/storekeeper_storage.css
+++ b/src/main/resources/static/css/storekeeper_storage.css
@@ -21,3 +21,33 @@ th, td {
     margin-right: 5px;
 }
 
+.page-link-my {
+    font-size: 1.2em;
+    padding: 0.5em 1em;
+    background: rgb(121, 184, 184);
+    background: linear-gradient(
+            85deg,
+            rgba(121, 184, 184, 1) 0%,
+            rgba(117, 175, 134, 0.7931547619047619) 56%
+    );
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+
+}
+
+.page-link-my:hover {
+    background: rgb(99, 152, 152);
+    background: linear-gradient(
+            85deg,
+            rgb(81, 126, 126) 0%,
+            rgb(81, 122, 94) 53%
+    );
+
+}
+
